# RaCoTo

./: Readme.md
RaCoTo-Backend/: Functions-request-config.js  README.md  hardhat.config.js  networks.js  package-lock.json  package.json
RaCoTo-Backend/.github/workflows/: main.yml
RaCoTo-Backend/ChainlinkFunctionSources/GlobalForestWatch/: queryCO2NetFlux.js
RaCoTo-Backend/ChainlinkFunctionSources/PrototypesJS/: createGeoStoreFromGeometry.js  getArea.js
RaCoTo-Backend/ChainlinkFunctionSources/PrototypesPython/: gfw_api_queries.ipynb  gfw_datasets_overview.csv  gfw_datasets_overview.xlsx  globalFW_API_interface.py  pyproject.toml
RaCoTo-Backend/contracts/: RCToken.sol  RaCoTo.sol  Treasury.sol
RaCoTo-Backend/contracts/Governance/: RaCoToUserGov.sol
RaCoTo-Backend/contracts/Interface/: IERC20.sol
RaCoTo-Backend/scripts/: deployConsumer.js  deployContract.js  deployToken.js  functionsSub.js  request.js  verifyContract.js
RaCoTo-Backend/tasks/Functions-client/: deployClient.js  request.js
RaCoTo-Backend/test/unit/: RaCoToGovUser.test.js
frontend/: .env.example  .prettier.json  next.config.js  package.json
frontend/.husky/: pre-push
frontend/components/: Footer.tsx  Procedure.tsx  Projects.tsx  Slider.tsx  Wrapper.tsx
frontend/components/Button/: ConnectWallet.tsx
frontend/constants/: br.ts  constants.ts  en.ts
frontend/hooks/: useWeb3Storage.ts
frontend/pages/: _app.tsx  index.tsx  register.tsx  waitlist.tsx
hackathonPresentation/: DevPostStory.md
hackathonPresentation/RaCoToDemo/: userMetaDataURI.txt  userRegistrationLinks.txt
(+17 files in other folders)
